fix: update isNullOrBlank method to use isBlank for better whitespace handling